--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.io.netty>4.0.0.CR2-SNAPSHOT</version.io.netty>
+        <version.io.netty>4.0.0.CR2</version.io.netty>
     </properties>
 
     <dependencies>
