--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
   <modules>
     <module>server</module>
-    <module>wildfly-server</module>
+    <module>wildfly-module</module>
   </modules>
   
     <dependencyManagement>
