--- a/wildfly-module/pom.xml
+++ b/wildfly-module/pom.xml
@@ -29,6 +29,10 @@
     <dependencies>
         <dependency>
             <groupId>org.jboss.aerogear</groupId>
+            <artifactId>aerogear-simplepush-protocol</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.aerogear</groupId>
             <artifactId>aerogear-simplepush-server</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
@@ -130,6 +134,7 @@
                                <copy file="src/main/resources/module/main/module.xml" tofile="${module.dir}/module.xml" />
                                <copy file="target/${project.artifactId}.jar" tofile="${module.dir}/${project.artifactId}-${project.version}.jar" />
                                <copy file="target/deps/aerogear-simplepush-server-1.0.0-SNAPSHOT.jar" todir="${module.dir}" />
+                               <copy file="target/deps/aerogear-simplepush-protocol-1.0.0-SNAPSHOT.jar" todir="${module.dir}" />
                                <copy file="target/deps/netty-all-4.0.0.CR2.jar" todir="${module.dir}" />
                                <copy file="target/deps/jackson-core-asl-1.9.2.jar" todir="${module.dir}" />
                                <copy file="target/deps/jackson-mapper-asl-1.9.2.jar" todir="${module.dir}" />
