--- a/server-vertx/pom.xml
+++ b/server-vertx/pom.xml
@@ -32,9 +32,9 @@
             <artifactId>aerogear-simplepush-server-core</artifactId>
         </dependency>
 		<dependency>
-			<groupId>org.vert-x</groupId>
+			<groupId>io.vertx</groupId>
 			<artifactId>vertx-platform</artifactId>
-			<version>1.3.1.final</version>
+			<version>2.0.0-beta4-SNAPSHOT</version>
 		</dependency>
          <dependency>
             <groupId>org.codehaus.jackson</groupId>
@@ -133,10 +133,10 @@
                                <copy file="target/deps/aerogear-simplepush-protocol-1.0.0-SNAPSHOT.jar" todir="${module.dir}/lib" />
                                <copy file="target/deps/jackson-core-asl-1.9.2.jar" todir="${module.dir}/lib" />
                                <copy file="target/deps/jackson-mapper-asl-1.9.2.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/vertx-core-1.3.1.final.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/vertx-platform-1.3.1.final.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/netty-3.5.9.Final.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/hazelcast-2.4.1.jar" todir="${module.dir}/lib" />
+                               <copy file="target/deps/netty-all-4.0.0.CR2.jar" todir="${module.dir}/lib" />
+                               <copy file="target/deps/hazelcast-2.5.1.jar" todir="${module.dir}/lib" />
+                               <copy file="target/deps/slf4j-api-1.7.5.jar" todir="${module.dir}/lib" />
+                               <copy file="target/deps/slf4j-simple-1.7.5.jar" todir="${module.dir}/lib" />
                               <echo>Module ${module.name} has been created in the target/mod.</echo>
                             </target>
                         </configuration>
