--- a/server-vertx/pom.xml
+++ b/server-vertx/pom.xml
@@ -24,6 +24,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <module.name>aerogear~simplepush~0.0.8</module.name>
+        <vertx.version>2.0.0-beta4-SNAPSHOT</vertx.version>
     </properties>
 
     <dependencies>
@@ -34,8 +35,16 @@
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-platform</artifactId>
-			<version>2.0.0-beta4-SNAPSHOT</version>
+			<version>${vertx.version}</version>
 		</dependency>
+  <!--
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>testtools</artifactId>
+			<version>2.0.0-beta1</version>
+            <scope>test</scope>
+		</dependency>
+  -->
          <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
