Adding SockJS support

--- a/server-vertx/pom.xml
+++ b/server-vertx/pom.xml
@@ -142,7 +142,7 @@
                                <copy file="target/deps/aerogear-simplepush-protocol-1.0.0-SNAPSHOT.jar" todir="${module.dir}/lib" />
                                <copy file="target/deps/jackson-core-asl-1.9.2.jar" todir="${module.dir}/lib" />
                                <copy file="target/deps/jackson-mapper-asl-1.9.2.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/netty-all-4.0.0.CR7-SNAPSHOT.jar" todir="${module.dir}/lib" />
+                               <copy file="target/deps/netty-all-4.0.0.CR3.jar" todir="${module.dir}/lib" />
                                <copy file="target/deps/hazelcast-2.5.1.jar" todir="${module.dir}/lib" />
                                <copy file="target/deps/slf4j-api-1.7.5.jar" todir="${module.dir}/lib" />
                                <copy file="target/deps/slf4j-simple-1.7.5.jar" todir="${module.dir}/lib" />
