--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
           </dependency>
           <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
+            <artifactId>netty-sockjs</artifactId>
             <version>${version.io.netty}</version>
           </dependency>
           <dependency>
