--- a/server-netty/pom.xml
+++ b/server-netty/pom.xml
@@ -44,7 +44,7 @@
     
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
+            <artifactId>netty-sockjs</artifactId>
         </dependency>
         
          <dependency>
