AGPUSH-123 "Netty server should be configured with a host and not just a port"

--- a/server-netty/pom.xml
+++ b/server-netty/pom.xml
@@ -116,6 +116,8 @@
                 <configuration>
                     <mainClass>org.jboss.aerogear.simplepush.server.netty.NettyWebSocketServer</mainClass>
                     <arguments>
+                        <!-- Host -->
+                        <argument>localhost</argument>
                         <!-- Port -->
                         <argument>7777</argument>
                         <!-- Transport Layer Security option -->
