--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,14 @@ jdk:
   - oraclejdk7
 #  - openjdk7
 before_install:
+  - wget http://www.apache.org/dist/maven/maven-3/3.0.5/binaries/apache-maven-3.0.5-bin.tar.gz
+  - tar -zxvf apache-maven-3.0.5-bin.tar.gz
   - git clone git://github.com/danbev/netty
   - cd $PWD/netty
   - git checkout -t origin/sockjs
   - cd sockjs
-  - mvn install -DskipTests -N
+  - ../../apache-maven-3.0.5/bin/mvn install -DskipTests -N --quiet
+  - cd ../..
+
 notifications:
   irc: "irc.freenode.org#aerogear"
