--- a/server-vertx/pom.xml
+++ b/server-vertx/pom.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.jboss.aerogear</groupId>
-		<artifactId>simplepush-server-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
+    <parent>
+        <groupId>org.jboss.aerogear</groupId>
+        <artifactId>simplepush-server-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
     <artifactId>aerogear-simplepush-server-vertx</artifactId>
     <packaging>jar</packaging>
     <name>AeroGear SimplePush Server Vert.x</name>
@@ -32,20 +31,20 @@
             <groupId>org.jboss.aerogear</groupId>
             <artifactId>aerogear-simplepush-server-core</artifactId>
         </dependency>
-		<dependency>
-			<groupId>io.vertx</groupId>
-			<artifactId>vertx-platform</artifactId>
-			<version>${vertx.version}</version>
-		</dependency>
-  <!--
-		<dependency>
-			<groupId>io.vertx</groupId>
-			<artifactId>testtools</artifactId>
-			<version>2.0.0-beta1</version>
-            <scope>test</scope>
-		</dependency>
-  -->
-         <dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-platform</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
+        <!--
+              <dependency>
+                  <groupId>io.vertx</groupId>
+                  <artifactId>testtools</artifactId>
+                  <version>2.0.0-beta1</version>
+                  <scope>test</scope>
+              </dependency>
+        -->
+        <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.2</version>
@@ -77,7 +76,7 @@
     </dependencies>
 
     <build>
-      <finalName>${project.artifactId}</finalName>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -104,22 +103,22 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.7</version>
                 <executions>
-                  <execution>
-                    <id>copy-dependencies</id>
-                    <phase>package</phase>
-                    <goals>
-                      <goal>copy-dependencies</goal>
-                    </goals>
-                    <configuration>
-                      <outputDirectory>${project.build.directory}/deps</outputDirectory>
-                      <overWriteReleases>false</overWriteReleases>
-                      <overWriteSnapshots>false</overWriteSnapshots>
-                      <overWriteIfNewer>true</overWriteIfNewer>
-                    </configuration>
-                  </execution>
-            </executions>
-          </plugin>
-          <plugin>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/deps</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <inherited>false</inherited>
@@ -132,28 +131,28 @@
                         </goals>
                         <phase>package</phase>
                         <configuration>
-                           <target>
-                               <delete dir="target/mods" />
-                               <property name="module.dir" value="target/mods/${module.name}" />
-                               <copy file="src/main/resources/mod.json" tofile="${module.dir}/mod.json" />
-                               <copy file="target/${project.artifactId}.jar" tofile="${module.dir}/lib/${project.artifactId}-${project.version}.jar" />
-                               <copy file="target/deps/aerogear-simplepush-server-api-1.0.0-SNAPSHOT.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/aerogear-simplepush-server-core-1.0.0-SNAPSHOT.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/aerogear-simplepush-protocol-1.0.0-SNAPSHOT.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/jackson-core-asl-1.9.2.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/jackson-mapper-asl-1.9.2.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/netty-all-4.0.2.Final.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/hazelcast-2.6.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/slf4j-api-1.7.5.jar" todir="${module.dir}/lib" />
-                               <copy file="target/deps/slf4j-simple-1.7.5.jar" todir="${module.dir}/lib" />
-                              <echo>Module ${module.name} has been created in the target/mod.</echo>
+                            <target>
+                                <delete dir="target/mods"/>
+                                <property name="module.dir" value="target/mods/${module.name}"/>
+                                <copy file="src/main/resources/mod.json" tofile="${module.dir}/mod.json"/>
+                                <copy file="target/${project.artifactId}.jar" tofile="${module.dir}/lib/${project.artifactId}-${project.version}.jar"/>
+                                <copy file="target/deps/aerogear-simplepush-server-api-1.0.0-SNAPSHOT.jar" todir="${module.dir}/lib"/>
+                                <copy file="target/deps/aerogear-simplepush-server-core-1.0.0-SNAPSHOT.jar" todir="${module.dir}/lib"/>
+                                <copy file="target/deps/aerogear-simplepush-protocol-1.0.0-SNAPSHOT.jar" todir="${module.dir}/lib"/>
+                                <copy file="target/deps/jackson-core-asl-1.9.2.jar" todir="${module.dir}/lib"/>
+                                <copy file="target/deps/jackson-mapper-asl-1.9.2.jar" todir="${module.dir}/lib"/>
+                                <copy file="target/deps/netty-all-4.0.2.Final.jar" todir="${module.dir}/lib"/>
+                                <copy file="target/deps/hazelcast-2.6.jar" todir="${module.dir}/lib"/>
+                                <copy file="target/deps/slf4j-api-1.7.5.jar" todir="${module.dir}/lib"/>
+                                <copy file="target/deps/slf4j-simple-1.7.5.jar" todir="${module.dir}/lib"/>
+                                <echo>Module ${module.name} has been created in the target/mod.</echo>
                             </target>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
-         <pluginManagement>
+        <pluginManagement>
             <plugins>
                 <!-- Ignore/Execute plugin execution -->
                 <plugin>
@@ -174,15 +173,15 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore />
+                                        <ignore/>
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
                         </lifecycleMappingMetadata>
                     </configuration>
                 </plugin>
-           </plugins>
-       </pluginManagement>
+            </plugins>
+        </pluginManagement>
     </build>
 
 </project>
