--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ jdk:
 before_install:
   - wget http://www.apache.org/dist/maven/maven-3/3.0.5/binaries/apache-maven-3.0.5-bin.tar.gz
   - tar -zxvf apache-maven-3.0.5-bin.tar.gz
-  - git clone git://github.com/danbev/netty
+  - git clone git://github.com/qmx/netty
   - cd netty
-  - git checkout -t origin/sockjs
+  - git checkout -b tmp ci
   - cd sockjs
   - ../../apache-maven-3.0.5/bin/mvn install -DskipTests -N --quiet
   - cd ../..
